--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Rec-overtourism</title>
 </head>
 <body>
-    
+    <div class="nav">
+
+    </div>
+    <div class="placeholder">
+        I'm lost in space, will be back soon
+    </div>
 </body>
 </html>
