--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     </div>
     <div class="placeholder">
-        I'm lost in space, will be back soon
+        I'm lost in space, will be back soon!
     </div>
 </body>
 </html>
