--- a/index.html
+++ b/index.html
@@ -25,10 +25,19 @@
         <a href="about.html" class="nav-item3">Why overtourism</a>
     </div>
 
-    <div class="placeholder">
-        I'm lost in space, will be back soon!
-    </div>
+    <div class="content-wrapper">
+        <div class="video-wrapper"></div>
+        <div class="destinations">
+            <div class="place flex-display-center-sb">
+                <div class="left-info">
+                    <div class="destination-title">Venice - Italy</div>
+                    <div class="continent flex-display-center-center">EUROPE</div>
+                </div>
 
+                <div class="reason">HISTORIC</div>
+            </div>
+        </div>
+    </div>
 
 
 
