--- a/index.html
+++ b/index.html
@@ -26,22 +26,138 @@
 
     <div class="content-wrapper">
         <div class="video-wrapper">
-            <img src="http://a31.3.189.179:8081/cgi-bin/faststream.jpg?stream=half&fps=15&rand=COUNTER" alt="">
+            <!-- <img src="http://31.3.189.179:8081/cgi-bin/faststream.jpg?stream=half&fps=15&rand=COUNTER" alt=""> -->
         </div>
         <div class="destinations">
+            <a href="destinations/venice.html">
+                <div class="place flex-display-center-sb" data-attr="https://www.youtube.com/embed/K_Vg94nBiaY?controls=0">
+                    <div class="left-info">
+                        <div class="header flex-display-center-center">
+                            <div class="square"></div>
+                            <div class="destination-title">Venice - Italy</div>
+                        </div>
+                        <div class="continent flex-display-center-center">EUROPE</div>
+                    </div>
+
+                    <div class="reason">HISTORIC</div>
+                </div>
+            </a>
+
+            <div class="place flex-display-center-sb" data-attr="http://74.59.112.107:84/GetData.cgi?CH=1">
+                <div class="left-info">
+                    <div class="header flex-display-center-center">
+                        <div class="square"></div>
+                        <div class="destination-title">Boracay - Philippines</div>
+                    </div>
+                    <div class="continent flex-display-center-center">ASIA</div>
+                </div>
+
+                <div class="reason">HISTORIC</div>
+            </div>
+           
             <div class="place flex-display-center-sb">
                 <div class="left-info">
-                    <div class="destination-title">Venice - Italy</div>
+                    <div class="header flex-display-center-center">
+                        <div class="square"></div>
+                        <div class="destination-title">Dubrovnik - Croatia</div>
+                    </div>
                     <div class="continent flex-display-center-center">EUROPE</div>
                 </div>
 
                 <div class="reason">HISTORIC</div>
+            </div>
+
+            <div class="place flex-display-center-sb">
+                <div class="left-info">
+                    <div class="header flex-display-center-center">
+                        <div class="square"></div>
+                        <div class="destination-title">Maya Beach - Mexico</div>
+                    </div>
+                    <div class="continent flex-display-center-center">SOUTH AMERICA</div>
+                </div>
+
+                <div class="reason">HISTORIC</div>
+            </div>
+
+            <div class="place flex-display-center-sb">
+                <div class="left-info">
+                    <div class="header flex-display-center-center">
+                        <div class="square"></div>
+                        <div class="destination-title">Cinque Terre - Italy</div>
+                    </div>
+                    <div class="continent flex-display-center-center">EUROPE</div>
+                </div>
+
+                <div class="reason">HISTORIC</div>
+            </div>
+
+            <div class="place flex-display-center-sb">
+                <div class="left-info">
+                    <div class="header flex-display-center-center">
+                        <div class="square"></div>
+                        <div class="destination-title">Santorini - Greece</div>
+                    </div>
+                    <div class="continent flex-display-center-center">EUROPE</div>
+                </div>
+
+                <div class="reason">HISTORIC</div>
+            </div>
+
+            <div class="place flex-display-center-sb">
+                <div class="left-info">
+                    <div class="header flex-display-center-center">
+                        <div class="square"></div>
+                        <div class="destination-title">Machu Pichu - Peru</div>
+                    </div>
+                    <div class="continent flex-display-center-center">SOUTH AMERICA</div>
+                </div>
+
+                <div class="reason">HISTORIC</div>
+            </div>
+
+            <div class="place flex-display-center-sb">
+                <div class="left-info">
+                    <div class="header flex-display-center-center">
+                        <div class="square"></div>
+                        <div class="destination-title">Mallorca - Spain</div>
+                    </div>
+                    <div class="continent flex-display-center-center">EUROPE</div>
+                </div>
+
+                <div class="reason">HISTORIC</div>
+            </div>
+
+            <div class="place flex-display-center-sb">
+                <div class="left-info">
+                    <div class="header flex-display-center-center">
+                        <div class="square"></div>
+                        <div class="destination-title">Fjadrargljufur Canyon - Iceland</div>
+                    </div>
+                    <div class="continent flex-display-center-center">EUROPE</div>
+                </div>
+
+                <div class="reason">NATURAL</div>
+            </div>
+            
+            <div class="place flex-display-center-sb">
+                <div class="left-info">
+                    <div class="header flex-display-center-center">
+                        <div class="square"></div>
+                        <div class="destination-title">More locations to be added soon</div>
+                    </div>
+                    <div class="continent flex-display-center-center">WORLD</div>
+                </div>
+
+                <div class="reason">???</div>
             </div>
         </div>
     </div>
 
 
 
+<script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+<script type="text/javascript" src="script.js"></script>
 </body>
-<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 </html>
