--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="destinations">
             <a href="destinations/venice.html">
-                <div class="place flex-display-center-sb" data-attr="https://www.youtube.com/embed/K_Vg94nBiaY?controls=0">
+                <div class="place flex-display-center-sb" data-attr="http://195.31.128.34:80/cgi-bin/faststream.jpg?stream=half&fps=15&rand=COUNTER">
                     <div class="left-info">
                         <div class="header flex-display-center-center">
                             <div class="square"></div>
