--- a/destinations/venice.html
+++ b/destinations/venice.html
@@ -24,6 +24,34 @@
         <a href="about.html" class="nav-item3">Why overtourism</a>
     </div>
 
+    <div class="content-wrapper">
+        <div class="video-wrapper">
+            <iframe src="http://1 195.31.128.34:80/cgi-bin/faststream.jpg?stream=half&fps=15&rand=COUNTER" frameborder="0"></iframe>
+        </div>
+        
+        <div class="actual-content">
+            <div class="side-bar-left">
+
+            </div>
+
+            <div class="buttons flex-display-center-sb">
+                <div class="list-btn btn-text flex-display-center-center">
+                    Show list
+                    <img src="../assets/arrow.svg" class="arrow"></img>
+                </div>
+                <div class="statistics-btn btn-text">See statistics</div>
+            </div>
+            <div class="where"> 
+            <span> Venice- Italy </span> <br>
+                RESIDENTS
+            </div>
+            
+            <div class="side-bar-right">
+
+            </div>
+        </div>
+    </div>
+
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="../script.js"></script>
