devo fare coseee

--- a/destinations/venice.html
+++ b/destinations/venice.html
@@ -30,8 +30,13 @@
         </div>
         
         <div class="actual-content">
-            <div class="side-bar-left">
-
+            <div class="side-bar sb-left">
+                <div class="city-card">
+                    Boracay - Philippines <br> <br>
+                    <span><div class="time">322 days</div> of waiting time </span> <br> 
+                    HISTORIC
+                </div>
+                <div class="line"></div>
             </div>
 
             <div class="buttons flex-display-center-sb">
@@ -46,8 +51,15 @@
                 RESIDENTS
             </div>
             
-            <div class="side-bar-right">
-
+            <div class="side-bar sb-right">
+                <div class="waiting-time-big">
+                    322 days <span>of waiting time</span>
+                    <div class="next-spot"> Next available spot on<span class="sans-bold"> April 3rd 2023</span></div>
+                    <div class="comparison-data">
+                        <div class="mono-font">Enough time to:</div>
+                        Get a C2 in English starting from 0 and still have 98 days spare
+                    </div>
+                </div>
             </div>
         </div>
     </div>
