Creazione nuove paginee

--- a/destinations/venice.html
+++ b/destinations/venice.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <div class="topnav hidden-nav">
-        <a href="index.html" class="nav-title">REC-OVERTOURISM</a>
+        <a href="../index.html" class="nav-title">REC-OVERTOURISM</a>
     
         <div class="link-section">
             <div class="link link-1">
-                <a href="map.html" class="nav-item">Map</a>
+                <a href="../pages/map.html" class="nav-item">Map</a>
             </div>
             <div class="link link-2">
-                <a href="streams.html" class="nav-item2">Camera streams</a>
+                <a href="../pages/streams.html" class="nav-item2">Camera streams</a>
             </div>
         </div>
 
-        <a href="about.html" class="nav-item3">Why overtourism</a>
+        <a href="../pages/simulator.html" class="nav-item3">Simulator</a>
     </div>
 
     <div class="content-wrapper">
