map looking crisp

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                     <div class="left-info">
                         <div class="header flex-display-center-center">
                             <div class="square"></div>
-                            <div class="destination-title">Maya Beach - Mexico</div>
+                            <div class="destination-title">Maya Bay - Thailand</div>
                         </div>
-                        <div class="continent btn btn-text flex-display-center-center">SOUTH AMERICA</div>
+                        <div class="continent btn btn-text flex-display-center-center">ASIA</div>
                     </div>
 
                     <div class="reason">HISTORIC</div>
@@ -175,5 +175,11 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="main.js"></script>
+<script>
+    document.querySelector('.destinations').addEventListener('scroll', function(){
+    scrollDetection();
+    });
+</script>
 </body>
 </html>
