--- a/destinations/venice.html
+++ b/destinations/venice.html
@@ -26,7 +26,8 @@
 
     <div class="content-wrapper">
         <div class="video-wrapper">
-            <iframe src="http://1 195.31.128.34:80/cgi-bin/faststream.jpg?stream=half&fps=15&rand=COUNTER" frameborder="0"></iframe>
+            <!-- <iframe src="http://1 195.31.128.34:80/cgi-bin/faststream.jpg?stream=half&fps=15&rand=COUNTER" frameborder="0"></iframe> -->
+            <video src="blob:https://www.earthcam.com/10e55968-b47c-43a4-8ede-66cbee44da68" muted="muted" crossorigin="anonymous" frameborder="0"></video>
         </div>
         
         <div class="actual-content">
