single stream looking niceeee

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </a>
             
             <a href="destinations/boracay.html">
-                <div class="place flex-display-center-sb" data-attr="http://74.59.112.107:84/GetData.cgi?CH=1">
+                <div class="place flex-display-center-sb" data-attr="http://58.69.178.54/mjpg/video.mjpg">
                     <div class="left-info">
                         <div class="header flex-display-center-center">
                             <div class="square"></div>
@@ -71,7 +71,7 @@
                 </div>
             </a>
 
-            <a href="destinations/mayabeach.html">
+            <a href="destinations/mayaB.html">
                 <div class="place flex-display-center-sb">
                     <div class="left-info">
                         <div class="header flex-display-center-center">
@@ -85,7 +85,7 @@
                 </div>
             </a>
 
-            <a href="destinations/cinqueterre.html">
+            <a href="destinations/cinqueT.html">
                 <div class="place flex-display-center-sb">
                     <div class="left-info">
                         <div class="header flex-display-center-center">
@@ -113,7 +113,7 @@
                 </div>
             </a>
 
-            <a href="destinations/machupichu.html">
+            <a href="destinations/machuP.html">
                 <div class="place flex-display-center-sb">
                     <div class="left-info">
                         <div class="header flex-display-center-center">
