--- a/pages/map.html
+++ b/pages/map.html
@@ -137,5 +137,6 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
 <script type="text/javascript" src="../script.js"></script>
+<script type="text/javascript" src="../map.js"></script>
 </body>
 </html>
