--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <a href="pages/simulator.html" class="nav-item3">Simulator</a>
     </div>
 
+    <div class="scroll-cue">Scroll down</div>
+
     <div class="content-wrapper">
         <div class="video-wrapper">
             <!-- <img src="http://31.3.189.179:8081/cgi-bin/faststream.jpg?stream=half&fps=15&rand=COUNTER" alt=""> -->
