--- a/pages/map.html
+++ b/pages/map.html
@@ -119,6 +119,25 @@
 
         <div id='map'></div>
     </div>
+
+    <div class="popUp">
+        <div class="popUp-title">Machu Pichu</div>
+        <div class="waiting-time-big">
+            322 days <span>of waiting time</span>
+            <div class="next-spot sans-regular"> Next available spot on<span class="sans-bold"> April 3rd 2023</span></div>
+            <div class="comparison-data">
+                <div class="mono-bold">Enough time to:</div>
+                Get a C2 in English starting from 0 and still have 98 days spare
+            </div>
+        </div>
+
+        <div class="popUp-footer flex-display-center-sb">
+            <a href="../destinations/machuP.html" class="stream-button list-btn btn-text">Watch stream</a>
+            <div class="reason">HISTORIC</div>
+        </div>
+    </div>
+
+
     <script>
         mapboxgl.accessToken = 'pk.eyJ1IjoiZ3Vya2k0IiwiYSI6ImNsMTJpNWluMTAyamYzanFremVrcGxwZmIifQ.iXZ5OIerg1Tnq8eRy4rmtw';
         var map = new mapboxgl.Map({
@@ -131,7 +150,6 @@
             this.map.resize()
         })
     </script>
-
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
