Pushare ogni tanto non fa male

--- a/destinations/venice.html
+++ b/destinations/venice.html
@@ -127,7 +127,7 @@
             </div>
             
             <div class="side-bar sb-right unfolded">
-                <div class="waiting-time-big">
+                <div class="waiting-time-big sans-bold">
                     322 days <span>of waiting time</span>
                     <div class="next-spot sans-regular"> Next available spot on<span class="sans-bold"> April 3rd 2023</span></div>
                     <div class="comparison-data">
