--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Rec-overtourism</title>
 </head>
 <body>
-    <div class="topnav hidden-nav">
+    <div class="topnav">
         <a href="index.html" class="nav-title">REC-OVERTOURISM</a>
     
         <div class="link-section">
@@ -22,6 +22,24 @@
         </div>
 
         <a href="pages/simulator.html" class="nav-item3">Simulator</a>
+    </div>
+
+     <div class="popUp popUp-index">
+        <div class="popUp-header flex-display-center-sb">
+            <div class="popUp-title">Waiting time</div>
+            <div class="close">X</div>
+        </div>
+        <div class="waiting-time-big sans-bold">
+            322 days <span>of waiting time</span>
+            <div class="next-spot sans-regular"> Next available spot on<span class="sans-bold"> April 3rd 2023</span></div>
+            <div class="comparison-data">
+                Through the website you will encounter many times this statistic. This number has been calculated for each 
+                destination based on different factors as the <span class="mono-bold"> tourism carrying capacity</span>, <span class="mono-bold"> number of residents </span> and <span class="mono-bold"> number of yearly 
+                tourists</span>. It shows the amount of days that a person would have to wait before accessing the location once 
+                containment policies will be enforced and generate a waiting list to visit the place.
+            </div>
+        </div>
+
     </div>
 
     <div class="scroll-cue">Scroll down</div>
