--- a/pages/simulator.html
+++ b/pages/simulator.html
@@ -10,18 +10,63 @@
 </head>
 <body>
     <div class="topnav hidden-nav">
-        <a href="index.html" class="nav-title">REC-OVERTOURISM</a>
+        <a href="../index.html" class="nav-title">REC-OVERTOURISM</a>
     
         <div class="link-section">
             <div class="link link-1">
-                <a href="pages/map.html" class="nav-item">Map</a>
+                <a href="map.html" class="nav-item">Map</a>
             </div>
             <div class="link link-2">
-                <a href="pages/streams.html" class="nav-item2">Camera streams</a>
+                <a href="streams.html" class="nav-item2">Camera streams</a>
             </div>
         </div>
 
-        <a href="pages/simulator.html" class="nav-item3">Simulator</a>
+        <a href="#" class="nav-item3">Simulator</a>
+    </div>
+
+    <div class="section-title">Simulator</div>
+    <div class="simulator-wrapper">
+        <div class="sim-header">
+            <span> Filters: </span>
+            <span class="disclaimer">Calculate the impact your travel has on the choosen destination</span>
+        </div>
+        <div class="duration-section">
+            <div class="section-title">Duration (days):</div>
+            <div class="slider"></div>
+        </div>
+
+        <div class="line"></div>
+
+        <div class="travelT-section">
+            <div class="section-title">Travel type:</div>
+            <div class="button-row">
+                <div class="stream-button list-btn btn-text">Domestic</div>
+                <div class="stream-button list-btn btn-text">Continental</div>
+                <div class="stream-button list-btn btn-text">Intercontinental</div>
+            </div>
+        </div>
+       
+        <div class="line"></div>
+
+        <div class="travelM-section">
+            <div class="section-title">Travel means:</div>
+            <div class="button-row">
+                <div class="stream-button list-btn btn-text">Car</div>
+                <div class="stream-button list-btn btn-text">Train/Bus</div>
+                <div class="stream-button list-btn btn-text">Plane</div>
+            </div>
+        </div>
+
+        <div class="line"></div>
+
+        <div class="travelO-section">
+            <div class="section-title">Travel options:</div>
+            <div class="button-row">
+                <div class="stream-button list-btn btn-text">Car</div>
+                <div class="stream-button list-btn btn-text">Train/Bus</div>
+                <div class="stream-button list-btn btn-text">Plane</div>
+            </div>
+        </div>
     </div>
 
 
