--- a/destinations/venice.html
+++ b/destinations/venice.html
@@ -118,7 +118,7 @@
                     Show list
                     <img src="../assets/arrow.svg" class="arrow"></img>
                 </div>
-                <div class="statistics-btn btn-text">See statistics</div>
+                <div class="statistics-btn pointer btn-text">See statistics</div>
             </div>
 
             <div class="where"> 
@@ -142,7 +142,7 @@
                     <div class="mono-bold">Data:</div>
                     Compare this location to:
 
-                    <div class="location-wrapper">
+                    <div class="location-wrapper pointer">
                         <div class="location-item location-menu flex-display-center-sb">
                             Locations
                             <img src="../assets/down.svg" alt="arrow down" class="arrow-down">
