--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <div class="popUp popUp-index">
         <div class="popUp-header flex-display-center-sb">
             <div class="popUp-title">Waiting time</div>
-            <div class="close">X</div>
+            <div class="close pointer">X</div>
         </div>
         <div class="waiting-time-big sans-bold">
             322 days <span>of waiting time</span>
