--- a/pages/simulator.html
+++ b/pages/simulator.html
@@ -84,8 +84,8 @@
                                 to the environment also due to a higher amount of fuel burnt per passenger
                             </div>
                         </div>
-                        <div class="checkbox">
-                            <label class="switch">
+                        <div class="checkbox pointer">
+                            <label class="switch pointer">
                                 <input type="checkbox" id="checky">
                                 <span class="checkbox-slider"></span>
                             </label>
@@ -99,8 +99,8 @@
                                 Choosing off-peak dates allows a better and healthier distribution of&nbsp;the tourist flow
                             </div>
                         </div>
-                        <div class="checkbox">
-                            <label class="switch">
+                        <div class="checkbox pointer">
+                            <label class="switch pointer">
                                 <input type="checkbox" id="checky2">
                                 <span class="checkbox-slider pointer"></span>
                             </label>
@@ -113,11 +113,11 @@
 
             <div class="button-section flex-display-sb-center">
                 <div class="reset pointer underlined sans-regular">Reset choices</div>
-                <div class="primary-btn pointer list-btn btn-text sans-regular flex-display-center-center">Calculate impact</div>
+                <div id="calculator" class="primary-btn pointer list-btn btn-text sans-regular flex-display-center-center">Calculate impact</div>
             </div>
 
         </div>
-        <div class="results-section">
+        <div class="results-section hidden">
             <div class="section-title mono-bold">Your travel means:</div>
             <div class="results-wrapper flex-display-sb-center">
                 <div class="waiting-time-big sans-bold">
